// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgreementView render editing mode shows editable fields 1`] = `
Array [
  <section
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <svg
      height="34"
      width="151"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#5700B5"
        fillRule="evenodd"
      >
        <path
          d="M28.991 16.457c0-3.328-2.427-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.142 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M97.328 16.457c0-3.328-2.428-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.141 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M3.912 15.331l-.056.066V0H0v25.6h3.856v-8.448l.056.065z"
        />
        <path
          d="M7.64 16.274l7.855-8.96h-4.713L5 14.062v4.41l6.176 7.128h4.605zM53.877 6.839c-2.392 0-4.285.988-5.463 2.89-1.035-1.83-2.749-2.89-5.07-2.89-1.585 0-2.931.453-3.988 1.367v3.551c.722-.829 1.732-1.224 2.846-1.224 2.106 0 3.356 1.426 3.356 3.986v11.08h3.856V15.36c0-3.327 1.606-4.826 3.891-4.826 2.107 0 3.463 1.426 3.463 3.986v11.08h3.856V14.264c0-4.571-2.713-7.424-6.747-7.424M38.268 9.466l-.03.043V7.314h-3.855V25.6h3.856V15.36c0-.238.011-.465.03-.684v-5.21zM77.013 7.314v2.707l-.04-.054v5.621c.025.225.04.453.04.686 0 3.292-2.428 5.742-5.677 5.742-3.249 0-5.676-2.45-5.676-5.742 0-3.291 2.427-5.741 5.676-5.741 1.912 0 3.534.852 4.55 2.22V8.72c-1.297-1.19-3.007-1.88-5.085-1.88-5.034 0-8.997 4.205-8.997 9.435s3.963 9.435 8.997 9.435c2.749 0 4.855-1.206 6.212-3.181v2.23c0 3.182-2 5.047-5.32 5.047-3.106 0-4.427-1.243-5.212-2.816l-3.32 1.975c1.499 2.926 4.534 4.425 8.46 4.425 4.678 0 9.176-2.742 9.176-8.63V7.314h-3.784z"
        />
        <g>
          <path
            d="M107 1l10.521 16.44-10.067 15.527h9.07l6.096-9.45V11.272L116.07 1zM140.128 16.526L150.196 1h-9.07l-8.662 13.426V1h-8.117v31.966h8.117V18.673l9.115 14.293h9.07z"
          />
        </g>
      </g>
    </svg>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      TO:
    </strong>
    <p>
      <span>
        Applicant Name
        , 
        street city postal code city country
      </span>
    </p>
    <p>
      WITH REFERENCE TO THE SALE/PURCHASE CONTRACT REF
       
      <label
        className="template_link"
        htmlFor="field_contractReference"
        id="preview_contractReference"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_contractReference"
        >
          CREF-123
        </span>
      </label>
       
      <label
        className="template_link"
        htmlFor="field_contractDate"
        id="preview_contractDate"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_contractDate"
        >
          2019-10-20
        </span>
      </label>
    </p>
    <strong>
      BETWEEN:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
    <strong>
      AND
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
  </section>,
  <section
    className="template_section"
  >
    <p>
      WE,
       
      <label
        className="template_link"
        htmlFor="field_issuingBankId"
        id="preview_issuingBankId"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_issuingBankId"
        >
          bank1
        </span>
      </label>
       
      HEREBY OPEN OUR IRREVOCABLE STAND-BY LETTER OF CREDIT NO.
       
      <span
        className="template_disabled"
        data-test-id="interactive_field_issuingBankReference"
      >
        [[ Issuing Bank reference ]]
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      BY ORDER OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (APPLICANT)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      IN FAVOUR OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (BENEFICIARY)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_amount"
    >
      <strong>
        FOR AMOUNT OF:
      </strong>
    </a>
    <p>
      <label
        className="template_link"
        htmlFor="field_amount"
        id="preview_amount"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_amount"
        >
          USD
           
          1,000.00
        </span>
      </label>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      COVERING:
    </strong>
    <p>
      600,000 PLUS OR MINUS 1.25 PCT BARRELS OF BRENT CRUDE OIL
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_expiryDate"
    >
      <strong>
        DATE OF EXPIRY:
      </strong>
    </a>
    <p>
      <label
        className="template_link"
        htmlFor="field_expiryDate"
        id="preview_expiryDate"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_expiryDate"
        >
          2019-10-11
        </span>
      </label>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <label
      className="template_link"
      htmlFor="field_overrideStandardTemplate"
      id="preview_overrideStandardTemplate"
      onClick={[Function]}
      style={
        Object {
          "display": "block",
        }
      }
    >
      <p
        data-test-id="interactive_field_overrideStandardTemplate"
        style={
          Object {
            "whiteSpace": "pre-wrap",
            "wordWrap": "break-word",
          }
        }
      >
        Default legal template clauses
      </p>
    </label>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_issuingBankPostalAddress"
    >
      <strong>
        DOCUMENTS TO BE SENT IN ONE LOT BY SPECIAL COURIER TO ISSUING BANK'S ADDRESS:
      </strong>
    </a>
    <br />
    <span
      className="template_disabled"
      data-test-id="interactive_field_issuingBankPostalAddress"
    >
      [[ Issuing Bank postal address ]]
    </span>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_feesPayableBy"
    >
      <strong>
        FEES PAYABLE BY:
      </strong>
    </a>
    <p>
      ALL CHARGES IN CONNECTION WITH THE OPERATION OF THIS IRREVOCABLE STAND-BY LETTER OF CREDIT ARE FOR THE
       
      <label
        className="template_link"
        htmlFor="field_feesPayableBy"
        id="preview_feesPayableBy"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_feesPayableBy"
        >
          SPLIT
        </span>
      </label>
       
      ACCOUNT.
    </p>
  </section>,
  <a
    className="template_anchor"
    id="preview_duplicateClause"
  >
    <section
      className="template_section"
    >
      <strong>
        DUPLICATE CLAUSE: 
      </strong>
      <label
        className="template_link"
        htmlFor="field_duplicateClause"
        id="preview_duplicateClause"
        onClick={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <p
          data-test-id="interactive_field_duplicateClause"
        >
          SHOULD THIS STAND-BY LETTER OF CREDIT ALSO BE ISSUED AND TRANSMITTED TO THE BENEFICIARY THROUGH MEANS OF COMMUNICATION OTHER THAN THROUGH THE KOMGO PLATFORM (SUCH AS E.G. BY SWIFT MESSAGE, FAX OR OTHERWISE), IT IS CLEARLY UNDERSTOOD THAT SUCH MULTIPLE ISSUANCES AND/OR TRANSMITTALS SHALL NOT RESULT IN A DOUBLE COMMITMENT OF THE ISSUING BANK AND THAT SAID ISSUING BANK SHALL THEREFORE HONOUR THE SAID STAND-BY LETTER OF CREDIT ONLY ONCE AND BE THEREBY RELEASED FROM ANY AND ALL OBLIGATIONS INCURRED UNDER ANY SUCH ADDITIONAL ISSUANCE AND/OR TRANSMITTAL. SUCH STAND-BY LETTER OF CREDIT SHALL BE DEEMED THE SAME ONE, IF IT COVERS THE SAME UNDERLYING TRANSACTION AND BEARS THE SAME REFERENCE NUMBER AS THE ONE INDICATED HEREIN.
        </p>
      </label>
    </section>
  </a>,
  <section
    className="template_section"
  >
    <strong>
      FOR:
    </strong>
    <p>
      <label
        className="template_link"
        htmlFor="field_issuingBankId"
        id="preview_issuingBankId"
        onClick={[Function]}
      >
        <span
          data-test-id="interactive_field_issuingBankId"
        >
          bank1
          , 
          street city postal code city country
        </span>
      </label>
      <br />
      (ISSUING BANK)
    </p>
  </section>,
]
`;

exports[`AgreementView render read only shows empty issuingBank 1`] = `
Array [
  <section
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <svg
      height="34"
      width="151"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#5700B5"
        fillRule="evenodd"
      >
        <path
          d="M28.991 16.457c0-3.328-2.427-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.142 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M97.328 16.457c0-3.328-2.428-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.141 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M3.912 15.331l-.056.066V0H0v25.6h3.856v-8.448l.056.065z"
        />
        <path
          d="M7.64 16.274l7.855-8.96h-4.713L5 14.062v4.41l6.176 7.128h4.605zM53.877 6.839c-2.392 0-4.285.988-5.463 2.89-1.035-1.83-2.749-2.89-5.07-2.89-1.585 0-2.931.453-3.988 1.367v3.551c.722-.829 1.732-1.224 2.846-1.224 2.106 0 3.356 1.426 3.356 3.986v11.08h3.856V15.36c0-3.327 1.606-4.826 3.891-4.826 2.107 0 3.463 1.426 3.463 3.986v11.08h3.856V14.264c0-4.571-2.713-7.424-6.747-7.424M38.268 9.466l-.03.043V7.314h-3.855V25.6h3.856V15.36c0-.238.011-.465.03-.684v-5.21zM77.013 7.314v2.707l-.04-.054v5.621c.025.225.04.453.04.686 0 3.292-2.428 5.742-5.677 5.742-3.249 0-5.676-2.45-5.676-5.742 0-3.291 2.427-5.741 5.676-5.741 1.912 0 3.534.852 4.55 2.22V8.72c-1.297-1.19-3.007-1.88-5.085-1.88-5.034 0-8.997 4.205-8.997 9.435s3.963 9.435 8.997 9.435c2.749 0 4.855-1.206 6.212-3.181v2.23c0 3.182-2 5.047-5.32 5.047-3.106 0-4.427-1.243-5.212-2.816l-3.32 1.975c1.499 2.926 4.534 4.425 8.46 4.425 4.678 0 9.176-2.742 9.176-8.63V7.314h-3.784z"
        />
        <g>
          <path
            d="M107 1l10.521 16.44-10.067 15.527h9.07l6.096-9.45V11.272L116.07 1zM140.128 16.526L150.196 1h-9.07l-8.662 13.426V1h-8.117v31.966h8.117V18.673l9.115 14.293h9.07z"
          />
        </g>
      </g>
    </svg>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      TO:
    </strong>
    <p>
      <span>
        Applicant Name
        , 
        street city postal code city country
      </span>
    </p>
    <p>
      WITH REFERENCE TO THE SALE/PURCHASE CONTRACT REF
       
      <span
        data-test-id="interactive_field_contractReference"
      >
        CREF-123
      </span>
       
      <span
        data-test-id="interactive_field_contractDate"
      >
        2019-10-20
      </span>
    </p>
    <strong>
      BETWEEN:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
    <strong>
      AND
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
  </section>,
  <section
    className="template_section"
  >
    <p>
      WE,
       
      <span
        className="template_disabled"
        data-test-id="interactive_field_issuingBankId"
      >
        [[ Issuing Bank ]]
      </span>
       
      HEREBY OPEN OUR IRREVOCABLE STAND-BY LETTER OF CREDIT NO.
       
      <span
        className="template_disabled"
        data-test-id="interactive_field_issuingBankReference"
      >
        [[ Issuing Bank reference ]]
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      BY ORDER OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (APPLICANT)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      IN FAVOUR OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (BENEFICIARY)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_amount"
    >
      <strong>
        FOR AMOUNT OF:
      </strong>
    </a>
    <p>
      <span
        data-test-id="interactive_field_amount"
      >
        USD
         
        1,000.00
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      COVERING:
    </strong>
    <p>
      600,000 PLUS OR MINUS 1.25 PCT BARRELS OF BRENT CRUDE OIL
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_expiryDate"
    >
      <strong>
        DATE OF EXPIRY:
      </strong>
    </a>
    <p>
      <span
        data-test-id="interactive_field_expiryDate"
      >
        2019-10-11
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <p
      data-test-id="interactive_field_overrideStandardTemplate"
      style={
        Object {
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      Default legal template clauses
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_issuingBankPostalAddress"
    >
      <strong>
        DOCUMENTS TO BE SENT IN ONE LOT BY SPECIAL COURIER TO ISSUING BANK'S ADDRESS:
      </strong>
    </a>
    <br />
    <span
      className="template_disabled"
      data-test-id="interactive_field_issuingBankPostalAddress"
    >
      [[ Issuing Bank postal address ]]
    </span>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_feesPayableBy"
    >
      <strong>
        FEES PAYABLE BY:
      </strong>
    </a>
    <p>
      ALL CHARGES IN CONNECTION WITH THE OPERATION OF THIS IRREVOCABLE STAND-BY LETTER OF CREDIT ARE FOR THE
       
      <span
        data-test-id="interactive_field_feesPayableBy"
      >
        SPLIT
      </span>
       
      ACCOUNT.
    </p>
  </section>,
  <a
    className="template_anchor"
    id="preview_duplicateClause"
  >
    <section
      className="template_section"
    >
      <strong>
        DUPLICATE CLAUSE: 
      </strong>
      <p
        data-test-id="interactive_field_duplicateClause"
      >
        SHOULD THIS STAND-BY LETTER OF CREDIT ALSO BE ISSUED AND TRANSMITTED TO THE BENEFICIARY THROUGH MEANS OF COMMUNICATION OTHER THAN THROUGH THE KOMGO PLATFORM (SUCH AS E.G. BY SWIFT MESSAGE, FAX OR OTHERWISE), IT IS CLEARLY UNDERSTOOD THAT SUCH MULTIPLE ISSUANCES AND/OR TRANSMITTALS SHALL NOT RESULT IN A DOUBLE COMMITMENT OF THE ISSUING BANK AND THAT SAID ISSUING BANK SHALL THEREFORE HONOUR THE SAID STAND-BY LETTER OF CREDIT ONLY ONCE AND BE THEREBY RELEASED FROM ANY AND ALL OBLIGATIONS INCURRED UNDER ANY SUCH ADDITIONAL ISSUANCE AND/OR TRANSMITTAL. SUCH STAND-BY LETTER OF CREDIT SHALL BE DEEMED THE SAME ONE, IF IT COVERS THE SAME UNDERLYING TRANSACTION AND BEARS THE SAME REFERENCE NUMBER AS THE ONE INDICATED HEREIN.
      </p>
    </section>
  </a>,
  <section
    className="template_section"
  >
    <strong>
      FOR:
    </strong>
    <p>
      <span
        className="template_disabled"
        data-test-id="interactive_field_issuingBankId"
      >
        [[ Issuing Bank ]]
        , 
        [[ Issuing Bank address ]] [[ Issuing Bank city ]] [[ Issuing Bank country ]]
      </span>
      <br />
      (ISSUING BANK)
    </p>
  </section>,
]
`;

exports[`AgreementView render read only shows values 1`] = `
Array [
  <section
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <svg
      height="34"
      width="151"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="#5700B5"
        fillRule="evenodd"
      >
        <path
          d="M28.991 16.457c0-3.328-2.427-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.142 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M97.328 16.457c0-3.328-2.428-5.778-5.57-5.778-3.141 0-5.569 2.45-5.569 5.778 0 3.328 2.428 5.778 5.57 5.778 3.141 0 5.57-2.45 5.57-5.778m-14.996 0c0-5.449 4.213-9.618 9.426-9.618 5.248 0 9.425 4.17 9.425 9.618 0 5.413-4.177 9.618-9.425 9.618-5.213 0-9.426-4.205-9.426-9.618M3.912 15.331l-.056.066V0H0v25.6h3.856v-8.448l.056.065z"
        />
        <path
          d="M7.64 16.274l7.855-8.96h-4.713L5 14.062v4.41l6.176 7.128h4.605zM53.877 6.839c-2.392 0-4.285.988-5.463 2.89-1.035-1.83-2.749-2.89-5.07-2.89-1.585 0-2.931.453-3.988 1.367v3.551c.722-.829 1.732-1.224 2.846-1.224 2.106 0 3.356 1.426 3.356 3.986v11.08h3.856V15.36c0-3.327 1.606-4.826 3.891-4.826 2.107 0 3.463 1.426 3.463 3.986v11.08h3.856V14.264c0-4.571-2.713-7.424-6.747-7.424M38.268 9.466l-.03.043V7.314h-3.855V25.6h3.856V15.36c0-.238.011-.465.03-.684v-5.21zM77.013 7.314v2.707l-.04-.054v5.621c.025.225.04.453.04.686 0 3.292-2.428 5.742-5.677 5.742-3.249 0-5.676-2.45-5.676-5.742 0-3.291 2.427-5.741 5.676-5.741 1.912 0 3.534.852 4.55 2.22V8.72c-1.297-1.19-3.007-1.88-5.085-1.88-5.034 0-8.997 4.205-8.997 9.435s3.963 9.435 8.997 9.435c2.749 0 4.855-1.206 6.212-3.181v2.23c0 3.182-2 5.047-5.32 5.047-3.106 0-4.427-1.243-5.212-2.816l-3.32 1.975c1.499 2.926 4.534 4.425 8.46 4.425 4.678 0 9.176-2.742 9.176-8.63V7.314h-3.784z"
        />
        <g>
          <path
            d="M107 1l10.521 16.44-10.067 15.527h9.07l6.096-9.45V11.272L116.07 1zM140.128 16.526L150.196 1h-9.07l-8.662 13.426V1h-8.117v31.966h8.117V18.673l9.115 14.293h9.07z"
          />
        </g>
      </g>
    </svg>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      TO:
    </strong>
    <p>
      <span>
        Applicant Name
        , 
        street city postal code city country
      </span>
    </p>
    <p>
      WITH REFERENCE TO THE SALE/PURCHASE CONTRACT REF
       
      <span
        data-test-id="interactive_field_contractReference"
      >
        CREF-123
      </span>
       
      <span
        data-test-id="interactive_field_contractDate"
      >
        2019-10-20
      </span>
    </p>
    <strong>
      BETWEEN:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
    <strong>
      AND
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
    </p>
  </section>,
  <section
    className="template_section"
  >
    <p>
      WE,
       
      <span
        data-test-id="interactive_field_issuingBankId"
      >
        bank1
      </span>
       
      HEREBY OPEN OUR IRREVOCABLE STAND-BY LETTER OF CREDIT NO.
       
      <span
        className="template_disabled"
        data-test-id="interactive_field_issuingBankReference"
      >
        [[ Issuing Bank reference ]]
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      BY ORDER OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (APPLICANT)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      IN FAVOUR OF:
    </strong>
    <p>
      Applicant Name
      , 
      street city postal code city country
      <br />
      (BENEFICIARY)
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_amount"
    >
      <strong>
        FOR AMOUNT OF:
      </strong>
    </a>
    <p>
      <span
        data-test-id="interactive_field_amount"
      >
        USD
         
        1,000.00
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <strong>
      COVERING:
    </strong>
    <p>
      600,000 PLUS OR MINUS 1.25 PCT BARRELS OF BRENT CRUDE OIL
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_expiryDate"
    >
      <strong>
        DATE OF EXPIRY:
      </strong>
    </a>
    <p>
      <span
        data-test-id="interactive_field_expiryDate"
      >
        2019-10-11
      </span>
    </p>
  </section>,
  <section
    className="template_section"
  >
    <p
      data-test-id="interactive_field_overrideStandardTemplate"
      style={
        Object {
          "whiteSpace": "pre-wrap",
          "wordWrap": "break-word",
        }
      }
    >
      Default legal template clauses
    </p>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_issuingBankPostalAddress"
    >
      <strong>
        DOCUMENTS TO BE SENT IN ONE LOT BY SPECIAL COURIER TO ISSUING BANK'S ADDRESS:
      </strong>
    </a>
    <br />
    <span
      className="template_disabled"
      data-test-id="interactive_field_issuingBankPostalAddress"
    >
      [[ Issuing Bank postal address ]]
    </span>
  </section>,
  <section
    className="template_section"
  >
    <a
      className="template_anchor"
      id="preview_feesPayableBy"
    >
      <strong>
        FEES PAYABLE BY:
      </strong>
    </a>
    <p>
      ALL CHARGES IN CONNECTION WITH THE OPERATION OF THIS IRREVOCABLE STAND-BY LETTER OF CREDIT ARE FOR THE
       
      <span
        data-test-id="interactive_field_feesPayableBy"
      >
        SPLIT
      </span>
       
      ACCOUNT.
    </p>
  </section>,
  <a
    className="template_anchor"
    id="preview_duplicateClause"
  >
    <section
      className="template_section"
    >
      <strong>
        DUPLICATE CLAUSE: 
      </strong>
      <p
        data-test-id="interactive_field_duplicateClause"
      >
        SHOULD THIS STAND-BY LETTER OF CREDIT ALSO BE ISSUED AND TRANSMITTED TO THE BENEFICIARY THROUGH MEANS OF COMMUNICATION OTHER THAN THROUGH THE KOMGO PLATFORM (SUCH AS E.G. BY SWIFT MESSAGE, FAX OR OTHERWISE), IT IS CLEARLY UNDERSTOOD THAT SUCH MULTIPLE ISSUANCES AND/OR TRANSMITTALS SHALL NOT RESULT IN A DOUBLE COMMITMENT OF THE ISSUING BANK AND THAT SAID ISSUING BANK SHALL THEREFORE HONOUR THE SAID STAND-BY LETTER OF CREDIT ONLY ONCE AND BE THEREBY RELEASED FROM ANY AND ALL OBLIGATIONS INCURRED UNDER ANY SUCH ADDITIONAL ISSUANCE AND/OR TRANSMITTAL. SUCH STAND-BY LETTER OF CREDIT SHALL BE DEEMED THE SAME ONE, IF IT COVERS THE SAME UNDERLYING TRANSACTION AND BEARS THE SAME REFERENCE NUMBER AS THE ONE INDICATED HEREIN.
      </p>
    </section>
  </a>,
  <section
    className="template_section"
  >
    <strong>
      FOR:
    </strong>
    <p>
      <span
        data-test-id="interactive_field_issuingBankId"
      >
        bank1
        , 
        street city postal code city country
      </span>
      <br />
      (ISSUING BANK)
    </p>
  </section>,
]
`;
